--- a/asm/67E9.html
+++ b/asm/67E9.html
@@ -106,18 +106,18 @@ Used by the routines at <a href="6800.html">6800</a>, <a href="6AAC.html">6AAC</
 <td class="asm-label"></td>
 <td class="address-1"><span id="67f8"></span>67F8</td>
 <td class="instruction">CP $02</td>
-<td class="comment-1" rowspan="2">Jump to <a href="672E.html">672E</a> if <span class="register">A</span> is equal to 02.</td>
+<td class="comment-1" rowspan="2">Jump to <a href="672E.html">ScrollAttributes_Left</a> if <span class="register">A</span> is equal to 02.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="67fa"></span>67FA</td>
-<td class="instruction">JP Z,<a href="672E.html">$672E</a></td>
+<td class="instruction">JP Z,<a href="672E.html">ScrollAttributes_Left</a></td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="67fd"></span>67FD</td>
-<td class="instruction">JP <a href="678C.html">$678C</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="678C.html">678C</a>.</td>
+<td class="instruction">JP <a href="678C.html">ScrollAttributes_Right</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="678C.html">ScrollAttributes_Right</a>.</td>
 </tr>
 </table>
 <table class="asm-navigation">
