--- a/dec/asm/26192.html
+++ b/dec/asm/26192.html
@@ -134,13 +134,12 @@ Scrolls the play area horizontally by shifting pixel data right using <code>RRD<
 <td class="asm-label"></td>
 <td class="address-1"><span id="26219"></span>26219</td>
 <td class="instruction">LD D,H</td>
-<td class="comment-1" rowspan="1"><span class="register">D</span>=<span class="register">H</span>.</td>
+<td class="comment-1" rowspan="2">Copy <span class="register">HL</span> to <span class="register">DE</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26220"></span>26220</td>
 <td class="instruction">LD E,L</td>
-<td class="comment-1" rowspan="1"><span class="register">E</span>=<span class="register">L</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
