--- a/dec/maps/all.html
+++ b/dec/maps/all.html
@@ -189,7 +189,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">0</td>
 <td class="map-c"><span id="26368"></span><a href="../asm/26368.html">26368</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26368.html">Routine at 6700</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26368.html">Fill New Attribute Column</a></div>
 </td>
 </tr>
 <tr>
@@ -205,7 +205,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">46</td>
 <td class="map-c"><span id="26414"></span><a href="../asm/26414.html">26414</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26414.html">Routine at 672E</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26414.html">Scroll Playarea Attributes Left</a></div>
 </td>
 </tr>
 <tr>
@@ -221,7 +221,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">140</td>
 <td class="map-c"><span id="26508"></span><a href="../asm/26508.html">26508</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26508.html">Routine at 678C</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26508.html">Scroll Playarea Attributes Right</a></div>
 </td>
 </tr>
 <tr>
