--- a/dec/maps/routines.html
+++ b/dec/maps/routines.html
@@ -93,19 +93,19 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="26368"></span><a href="../asm/26368.html">26368</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26368.html">Routine at 6700</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26368.html">Fill New Attribute Column</a></div>
 </td>
 </tr>
 <tr>
 <td class="map-c"><span id="26414"></span><a href="../asm/26414.html">26414</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26414.html">Routine at 672E</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26414.html">Scroll Playarea Attributes Left</a></div>
 </td>
 </tr>
 <tr>
 <td class="map-c"><span id="26508"></span><a href="../asm/26508.html">26508</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26508.html">Routine at 678C</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26508.html">Scroll Playarea Attributes Right</a></div>
 </td>
 </tr>
 <tr>
