--- a/maps/all.html
+++ b/maps/all.html
@@ -189,7 +189,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">0</td>
 <td class="map-c"><span id="6700"></span><a href="../asm/6700.html">6700</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6700.html">Routine at 6700</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6700.html">Fill New Attribute Column</a></div>
 </td>
 </tr>
 <tr>
@@ -205,7 +205,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">46</td>
 <td class="map-c"><span id="672e"></span><a href="../asm/672E.html">672E</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/672E.html">Routine at 672E</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/672E.html">Scroll Playarea Attributes Left</a></div>
 </td>
 </tr>
 <tr>
@@ -221,7 +221,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">140</td>
 <td class="map-c"><span id="678c"></span><a href="../asm/678C.html">678C</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/678C.html">Routine at 678C</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/678C.html">Scroll Playarea Attributes Right</a></div>
 </td>
 </tr>
 <tr>
