--- a/dec/asm/26414.html
+++ b/dec/asm/26414.html
@@ -35,186 +35,226 @@ Next: <a href="26496.html">26496</a>
 </td>
 </tr>
 </table>
-<div class="description">26414: Routine at 672E</div>
+<div class="description">26414: Scroll Playarea Attributes Left</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routine at <a href="26601.html">DrawPlayarea</a>.
+Scrolls the playarea attribute buffer left by one column to match the pixel scrolling. This keeps the colours aligned with the screen content when its scrolling horizontally.
 </div>
 </div>
 </td>
 </tr>
 <tr>
+<td class="asm-label">ScrollAttributes_Left</td>
 <td class="address-2"><span id="26414"></span>26414</td>
 <td class="instruction">LD HL,22529</td>
-<td class="comment-1" rowspan="1"><span class="register">HL</span>=22529 (attribute buffer location).</td>
+<td class="comment-1" rowspan="1">Set the source address in <span class="register">HL</span> to 22529 (attribute buffer location).</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26417"></span>26417</td>
 <td class="instruction">LD DE,22528</td>
-<td class="comment-1" rowspan="1"><span class="register">DE</span>=<a href="16384.html#22528">22528</a> (attribute buffer location).</td>
+<td class="comment-1" rowspan="1">And the destination address in <span class="register">DE</span> to <a href="16384.html#22528">22528</a> (attribute buffer location).</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26420"></span>26420</td>
 <td class="instruction">LD B,16</td>
-<td class="comment-1" rowspan="1"><span class="register">B</span>=16.</td>
+<td class="comment-1" rowspan="1">Set a counter in <span class="register">B</span> to process 16 rows.</td>
 </tr>
 <tr>
+<td class="asm-label">ScrollAttributes_Left_RowLoop</td>
 <td class="address-2"><span id="26422"></span>26422</td>
 <td class="instruction">LD C,255</td>
 <td class="comment-1" rowspan="1"><span class="register">C</span>=255.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26424"></span>26424</td>
 <td class="instruction">LDI</td>
-<td class="comment-1" rowspan="31">LDI.</td>
+<td class="comment-1" rowspan="31">Copy 31 bytes per row. This shifts the entire row left by 1 position.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26426"></span>26426</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26428"></span>26428</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26430"></span>26430</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26432"></span>26432</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26434"></span>26434</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26436"></span>26436</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26438"></span>26438</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26440"></span>26440</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26442"></span>26442</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26444"></span>26444</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26446"></span>26446</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26448"></span>26448</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26450"></span>26450</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26452"></span>26452</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26454"></span>26454</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26456"></span>26456</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26458"></span>26458</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26460"></span>26460</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26462"></span>26462</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26464"></span>26464</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26466"></span>26466</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26468"></span>26468</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26470"></span>26470</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26472"></span>26472</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26474"></span>26474</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26476"></span>26476</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26478"></span>26478</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26480"></span>26480</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26482"></span>26482</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26484"></span>26484</td>
 <td class="instruction">LDI</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26486"></span>26486</td>
 <td class="instruction">INC HL</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">HL</span> by one.</td>
+<td class="comment-1" rowspan="1">Skip the last column of the source row.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26487"></span>26487</td>
 <td class="instruction">INC DE</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">DE</span> by one.</td>
+<td class="comment-1" rowspan="1">Skip the last column of the destination row.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26488"></span>26488</td>
-<td class="instruction">DJNZ <a href="26414.html#26422">26422</a></td>
-<td class="comment-1" rowspan="1">Decrease counter by one and loop back to <a href="26414.html#26422">26422</a> until counter is zero.</td>
+<td class="instruction">DJNZ <a href="26414.html#26422">ScrollAttributes_Left_RowLoop</a></td>
+<td class="comment-1" rowspan="1">Decrease the row counter by one and loop back to <a href="26414.html#26422">ScrollAttributes_Left_RowLoop</a> until all of the rows have been processed.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26490"></span>26490</td>
 <td class="instruction">LD HL,22559</td>
 <td class="comment-1" rowspan="1"><span class="register">HL</span>=22559 (attribute buffer location).</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26493"></span>26493</td>
-<td class="instruction">JP <a href="26368.html">26368</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="26368.html">26368</a>.</td>
+<td class="instruction">JP <a href="26368.html">FillNewAttributeColumn</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="26368.html">FillNewAttributeColumn</a>.</td>
 </tr>
 </table>
 <table class="asm-navigation">
