--- a/dec/asm/26508.html
+++ b/dec/asm/26508.html
@@ -35,186 +35,226 @@ Next: <a href="26590.html">26590</a>
 </td>
 </tr>
 </table>
-<div class="description">26508: Routine at 678C</div>
+<div class="description">26508: Scroll Playarea Attributes Right</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routine at <a href="26601.html">DrawPlayarea</a>.
+Scrolls the playarea attribute buffer right by one column to match the pixel scrolling. This keeps the colours aligned with the screen content when its scrolling horizontally.
 </div>
 </div>
 </td>
 </tr>
 <tr>
+<td class="asm-label">ScrollAttributes_Right</td>
 <td class="address-2"><span id="26508"></span>26508</td>
 <td class="instruction">LD HL,23038</td>
-<td class="comment-1" rowspan="1"><span class="register">HL</span>=23038 (attribute buffer location).</td>
+<td class="comment-1" rowspan="1">Set the source address in <span class="register">HL</span> to 23038 (attribute buffer location).</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26511"></span>26511</td>
 <td class="instruction">LD DE,23039</td>
-<td class="comment-1" rowspan="1"><span class="register">DE</span>=23039 (attribute buffer location).</td>
+<td class="comment-1" rowspan="1">And the destination address in <span class="register">DE</span> to 23039 (attribute buffer location).</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26514"></span>26514</td>
 <td class="instruction">LD B,16</td>
-<td class="comment-1" rowspan="1"><span class="register">B</span>=16.</td>
+<td class="comment-1" rowspan="1">Set a counter in <span class="register">B</span> to process 16 rows.</td>
 </tr>
 <tr>
+<td class="asm-label">ScrollAttributes_Right_RowLoop</td>
 <td class="address-2"><span id="26516"></span>26516</td>
 <td class="instruction">LD C,255</td>
 <td class="comment-1" rowspan="1"><span class="register">C</span>=255.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26518"></span>26518</td>
 <td class="instruction">LDD</td>
-<td class="comment-1" rowspan="31">LDD.</td>
+<td class="comment-1" rowspan="31">Copy 31 bytes per row. This shifts the entire row right by 1 position.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26520"></span>26520</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26522"></span>26522</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26524"></span>26524</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26526"></span>26526</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26528"></span>26528</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26530"></span>26530</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26532"></span>26532</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26534"></span>26534</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26536"></span>26536</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26538"></span>26538</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26540"></span>26540</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26542"></span>26542</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26544"></span>26544</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26546"></span>26546</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26548"></span>26548</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26550"></span>26550</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26552"></span>26552</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26554"></span>26554</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26556"></span>26556</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26558"></span>26558</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26560"></span>26560</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26562"></span>26562</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26564"></span>26564</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26566"></span>26566</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26568"></span>26568</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26570"></span>26570</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26572"></span>26572</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26574"></span>26574</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26576"></span>26576</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26578"></span>26578</td>
 <td class="instruction">LDD</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26580"></span>26580</td>
 <td class="instruction">DEC HL</td>
-<td class="comment-1" rowspan="1">Decrease <span class="register">HL</span> by one.</td>
+<td class="comment-1" rowspan="1">Skip the last column of the source row.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26581"></span>26581</td>
 <td class="instruction">DEC DE</td>
-<td class="comment-1" rowspan="1">Decrease <span class="register">DE</span> by one.</td>
+<td class="comment-1" rowspan="1">Skip the last column of the destination row.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26582"></span>26582</td>
-<td class="instruction">DJNZ <a href="26508.html#26516">26516</a></td>
-<td class="comment-1" rowspan="1">Decrease counter by one and loop back to <a href="26508.html#26516">26516</a> until counter is zero.</td>
+<td class="instruction">DJNZ <a href="26508.html#26516">ScrollAttributes_Right_RowLoop</a></td>
+<td class="comment-1" rowspan="1">Decrease the row counter by one and loop back to <a href="26508.html#26516">ScrollAttributes_Right_RowLoop</a> until all of the rows have been processed.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26584"></span>26584</td>
 <td class="instruction">LD HL,22528</td>
 <td class="comment-1" rowspan="1"><span class="register">HL</span>=<a href="16384.html#22528">22528</a> (attribute buffer location).</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26587"></span>26587</td>
-<td class="instruction">JP <a href="26368.html">26368</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="26368.html">26368</a>.</td>
+<td class="instruction">JP <a href="26368.html">FillNewAttributeColumn</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="26368.html">FillNewAttributeColumn</a>.</td>
 </tr>
 </table>
 <table class="asm-navigation">
