--- a/dec/asm/26601.html
+++ b/dec/asm/26601.html
@@ -106,18 +106,18 @@ Used by the routines at <a href="26624.html">26624</a>, <a href="27308.html">273
 <td class="asm-label"></td>
 <td class="address-1"><span id="26616"></span>26616</td>
 <td class="instruction">CP 2</td>
-<td class="comment-1" rowspan="2">Jump to <a href="26414.html">26414</a> if <span class="register">A</span> is equal to 2.</td>
+<td class="comment-1" rowspan="2">Jump to <a href="26414.html">ScrollAttributes_Left</a> if <span class="register">A</span> is equal to 2.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26618"></span>26618</td>
-<td class="instruction">JP Z,<a href="26414.html">26414</a></td>
+<td class="instruction">JP Z,<a href="26414.html">ScrollAttributes_Left</a></td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26621"></span>26621</td>
-<td class="instruction">JP <a href="26508.html">26508</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="26508.html">26508</a>.</td>
+<td class="instruction">JP <a href="26508.html">ScrollAttributes_Right</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="26508.html">ScrollAttributes_Right</a>.</td>
 </tr>
 </table>
 <table class="asm-navigation">
