--- a/maps/routines.html
+++ b/maps/routines.html
@@ -93,19 +93,19 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="6700"></span><a href="../asm/6700.html">6700</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6700.html">Routine at 6700</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6700.html">Fill New Attribute Column</a></div>
 </td>
 </tr>
 <tr>
 <td class="map-c"><span id="672e"></span><a href="../asm/672E.html">672E</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/672E.html">Routine at 672E</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/672E.html">Scroll Playarea Attributes Left</a></div>
 </td>
 </tr>
 <tr>
 <td class="map-c"><span id="678c"></span><a href="../asm/678C.html">678C</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/678C.html">Routine at 678C</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/678C.html">Scroll Playarea Attributes Right</a></div>
 </td>
 </tr>
 <tr>
